--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <img id="enemy_fly" src="assets/enemy_fly.png">
     <img id="enemy_plant" src="assets/enemy_plant.png">
     <img id="enemy_spider_big" src="assets/enemy_spider_big.png">
+    <img id="fire" src="assets/fire.png">
+    <img id="lives" src="assets/heart.png">
+    <img id="collisionAnimation" src="assets/collisionAnimation.png">
+    <audio id="Obama" src="assets/Obama.mp3"></audio>
 
     <script type="module" src="main.js"></script>
 </body>
